--- a/src/cti_authoring_tool/public/index.html
+++ b/src/cti_authoring_tool/public/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Authoring Tool - CTI Blueprints</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
+    <% if(htmlWebpackPlugin.options.googleAnalyticsTag) { %>
+      <script async src="https://www.googletagmanager.com/gtag/js?id=<%=htmlWebpackPlugin.options.googleAnalyticsTag%>"></script>
+      <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config',<%=`"${ htmlWebpackPlugin.options.googleAnalyticsTag }"`%>);</script>
+    <% } %>
   </head>
   <body>
     <noscript>
